# audio

./: .gitignore
binding/: index.cpp  jsAudio.cpp  jsAudio.h  plugin.h  test.cpp
cmake/: imx6qwin.cmake  msvc.cmake
generate/: CMakeLists.txt
generate/binding/: CMakeLists.txt
generate/js/: CMakeLists.txt
generate/src/: CMakeLists.txt
generate/test/: CMakeLists.txt
js/: binding.cpp  export.def  index.js
modules/: audiostream.js  impstream.js  index.js
src/: audio.cpp  audio.h  circularbuffer.hpp  index.cpp  wav.cpp  wav.h
test/: #spectrum.py#  client.js  index.js  inputstream.js  pcm.js  play.js  record.js  robot.js  spectrum.py  test.js
test/plot/: 2gif.cmd  index.js  pcm.js
test/portaudio/: client.js  fstream.js  index.js  record.js  show.js  test.js
test/py/: SFEngine.py  compare.py  cv.py  data1.txt  data2.txt  dsp.py  eee  hashy.py  main.py  rect.py  rosatest.py  shazam.py  sin.py  sin2file.py  singal.py  spectrum.py  test.py  test1.py  trigermel.py  wavinfo.py
test/src/: robot.js
